# cube-explorer-project

./: .env.example  .gitignore  Makefile  README.md  cube.js  docker-compose.yml
.cursor/: mcp.json
frontend/: index.html
mcp_server/: cube_mcp.py  test_client.py
model/: README.md  globals.py
model/cubes/: accounts.schema.json  categories.schema.json  identity.json  merchants.schema.json  transactions.schema.json  users.schema.json
model/dynamic/: event_cubes.yml.jinja
model/views/: spending.yml
prefect/: README.md  _env.py  cube_build.py  cube_query.py  requirements.txt
queries/: graphql_api.md  rest_api.md  sql_api.md
rust/cube-cli/: Cargo.toml  Dockerfile
rust/cube-cli/src/: main.rs
scripts/: as-user.sh  build_js_cubes.js  q  sign_jwt.py  test_apis.sh  test_auth.sh
seed/: 01_schema.sql  02_data.sql  03_indexes.sql
