[package]
name = "cube-cli"
version = "0.1.0"
edition = "2021"
description = "Terminal client for the Cube Explorer semantic layer"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
